# ImageEditorSample

./: build.gradle.kts  encrypt.sh  encrypt_result.txt  settings.gradle.kts
OpenGLLib/: build.gradle.kts
OpenGLLib/src/main/assets/shader/: base_filter_ver.vert  clarity_filter_frag.frag  color_temperature_filter_frag.frag  contrast_filter_frag.frag  exposure_filter_frag.frag  filter_highlight_shadow.glsl  filter_lut_charlotte.glsl  filter_lut_ela.glsl  filter_lut_elizabeth.glsl  filter_lut_emily.glsl  filter_lut_harper.glsl  filter_lut_issabella.glsl  filter_lut_madison.glsl  filter_lut_mia.glsl  filter_lut_olivia.glsl  no_filter_frag.frag  no_filter_ver.vert  saturation_filter_frag.frag  shader_frag_adjust_image.glsl  shader_frag_base.frag  shader_frag_brightness.frag  shader_frag_gaussian_blur.frag  shader_frag_highlight.frag  shader_frag_lut.glsl  shader_frag_lut_abigail.glsl  shader_frag_lut_addison.glsl  shader_frag_lut_amelia.glsl  shader_frag_lut_ava.glsl  shader_frag_lut_avery.glsl  shader_frag_lut_emma.glsl  shader_frag_lut_evelyn.glsl  shader_frag_lut_sophia.glsl  shader_frag_shadow.glsl  shader_frag_sharpen.glsl  shader_frag_temperature_hue.glsl  test.frag  tone_filter_frag.frag  vignette_filter_frag.frag
OpenGLLib/src/main/res/values/: attrs.xml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/: encrypt_portrait_matting_v5.1.model  encrypt_portrait_seg_v5.1.model
app/src/main/assets/json/: gradients.json
app/src/main/res/drawable/: baseline_menu_book_24.xml  ic_background.xml  ic_check_circle.xml  ic_download.xml  ic_layers.xml  ic_order.xml  ic_picture.xml  ic_picture_landscape.xml  ic_picture_portrait.xml  ic_pro_floating_chevron_right.xml  ic_right_arrow.xml  ic_right_arrow1.xml  ic_settings.xml  ic_text.xml  (+37 more)
cryptlib/: batch_encrypt.sh  build.gradle.kts  encrypt_text.txt
cryptlib/src/main/cpp/: CMakeLists.txt  cryptlib.cpp  encrypt_text.h
cryptlib/src/main/cpp/include/openssl/: opensslconf.h
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
jnilibrary/: build.gradle.kts
nativelib/: build.gradle.kts
nativelib/src/main/cpp/: CMakeLists.txt  LibAlpha.cpp  LibAlpha.h  enhance_foreground.h  nativelib.cpp
nativelib/src/main/cpp/include/opencv2/: cvconfig.h  opencv_modules.hpp
renderscript-toolkit/: build.gradle.kts
(+163 files in other folders)
